--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -16,7 +16,7 @@
   /* sticky footer fix start */
   position: absolute;
   bottom: 0em;
-  height: auto;
+  height: 3em;
   /* sticky footer fix end */
 
   margin-top: 3em;
